--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,27 +1,10 @@
-$mobile-width: 420px;
-$tablet-width: 960px;
-$desktop-width: 1280px;
+//<ПЕРЕМЕННЫЕ>===========================================================================================================
+$minWidth: 320px;
+$maxWidth: 1152;
+$maxWidthContainer: 856;
+$md1: 1200;
+$md2: 991.98;
+$md3: 767.98;
+$md4: 479.98;
+$md5: 369.98;
 
-@mixin mobile {
-  @media (max-width: #{$mobile-width - 1px}) {
-    @content;
-  }
-}
-
-@mixin tablet {
-  @media (min-width: #{$mobile-width}) and (max-width: #{$tablet-width - 1px}) {
-    @content;
-  }
-}
-
-@mixin laptop {
-  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
-    @content;
-  }
-}
-
-@mixin desktop {
-  @media (min-width: #{$desktop-width}) {
-    @content;
-  }
-}
