--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -5,9 +5,9 @@
     background-color: $color__main_grey;
     padding: 50px 30px 0px 30px;
     
-    @include mobile {
-      padding: 25px 30px 0px 30px;
-    }
+    // @include mobile {
+    //   padding: 25px 30px 0px 30px;
+    // }
   }
 
   &__lead {
