--- a/scss/_testimonial.scss
+++ b/scss/_testimonial.scss
@@ -4,15 +4,15 @@
   background-size: cover;
   height: 731px;
 
-  @include laptop {
-    height: 100vh;
-  }
-  @include tablet {
-    height: 100vh;
-  }
-  @include mobile {
-    height: 100vh;
-  }
+  // @include laptop {
+  //   height: 100vh;
+  // }
+  // @include tablet {
+  //   height: 100vh;
+  // }
+  // @include mobile {
+  //   height: 100vh;
+  // }
 
   &__row {
     display: flex;
@@ -30,18 +30,18 @@
     color: $color__main_white;
     padding: 119px 0px 95px 0px;
 
-    @include laptop {
-      padding-top: 40%;
-    }
-    @include tablet {
-      padding-top: 40%;
-      font-size: 2em;
-    }
+    // @include laptop {
+    //   padding-top: 40%;
+    // }
+    // @include tablet {
+    //   padding-top: 40%;
+    //   font-size: 2em;
+    // }
 
-    @include mobile {
-      padding: 33px 0px 24px 0px;
-      font-size: 1.5em;
-    }
+    // @include mobile {
+    //   padding: 33px 0px 24px 0px;
+    //   font-size: 1.5em;
+    // }
   }
 
   &__subtitle {
@@ -53,13 +53,13 @@
     text-transform: uppercase;
     padding: 0px 0px 37px 0px;
 
-    @include tablet{
-     padding: 0px 0px 17px 0px;
-    }
+    // @include tablet{
+    //  padding: 0px 0px 17px 0px;
+    // }
 
-    @include mobile {
-      font-size: 1.5em;
-    }
+    // @include mobile {
+    //   font-size: 1.5em;
+    // }
   }
   &__text {
     text-indent: 30px;
@@ -70,13 +70,13 @@
     text-align: justify;
     color: $color__main_milk;
 
-    @include tablet {
-      text-indent: 10px;
-      line-height: 1.3;
-    }
-    @include mobile {
-      font-size: 1.2em;
-    }
+    // @include tablet {
+    //   text-indent: 10px;
+    //   line-height: 1.3;
+    // }
+    // @include mobile {
+    //   font-size: 1.2em;
+    // }
   }
   &__text i {
     position: absolute;
@@ -85,10 +85,10 @@
   }
 
   &__photo {
-    width: 40%;
+    display: none;
 
-    @include mobile {
-      display: none;
+    @media (min-width: $md3+px) {
+      width: 40%;
     }
   }
   &__item {
@@ -97,14 +97,14 @@
     position: relative;
     background-color: $color__main_dark-grey;
 
-    @include tablet {
-      padding: 12px 25px 25px 10px;
-    }
-    @include mobile {
-      width: 100%;
-      height: 100vh;
-      padding: 70px 25px 26px 30px;
-    }
+    // @include tablet {
+    //   padding: 12px 25px 25px 10px;
+    // }
+    // @include mobile {
+    //   width: 100%;
+    //   height: 100vh;
+    //   padding: 70px 25px 26px 30px;
+    // }
   }
 }
 
@@ -112,10 +112,10 @@ q {
   font-size: 20px;
   color: $color__main_blue;
 
-  @include tablet {
-    display: none;
-  }
-  @include mobile {
-    display: none;
-  }
+  // @include tablet {
+  //   display: none;
+  // }
+  // @include mobile {
+  //   display: none;
+  // }
 }
