--- a/scss/_why-choose-us.scss
+++ b/scss/_why-choose-us.scss
@@ -4,15 +4,15 @@
   background-size: cover;
   height: 685px;
 
-  @include laptop {
-    height: 100vh;
-  }
-  @include tablet {
-    height: 100vh;
-  }
-  @include mobile {
-    height: 100vh;
-  }
+  // @include laptop {
+  //   height: 100vh;
+  // }
+  // @include tablet {
+  //   height: 100vh;
+  // }
+  // @include mobile {
+  //   height: 100vh;
+  // }
 
   &__row {
     display: flex;
@@ -21,19 +21,19 @@
   }
 
   &__item {
-    width: 56%;
+    width: 100%;
 
-    @include laptop {
-      margin: 150px 0px 0px 35px;
-      width: 45%;
-    }
-    @include tablet {
-      margin: 150px 0px 0px 25px;
-      width: 45%;
-    }
-    @include mobile {
-      width: 100%;
-    }
+    // @include laptop {
+    //   margin: 150px 0px 0px 35px;
+    //   width: 45%;
+    // }
+    // @include tablet {
+    //   margin: 150px 0px 0px 25px;
+    //   width: 45%;
+    // }
+    // @include mobile {
+    //   width: 100%;
+    // }
   }
 
   &__title {
@@ -45,15 +45,15 @@
     color: $color__main_white;
     padding: 207px 0px 65px 0px;
 
-    @include tablet {
-      font-size: 1.5em;
-      padding: 50px 10px 50px 0px;
-    }
+    // @include tablet {
+    //   font-size: 1.5em;
+    //   padding: 50px 10px 50px 0px;
+    // }
 
-    @include mobile {
-      font-size: 2em;
-      padding: 20% 5% 5% 5%;
-    }
+    // @include mobile {
+    //   font-size: 2em;
+    //   padding: 20% 5% 5% 5%;
+    // }
   }
 
   &__text {
@@ -65,29 +65,29 @@
     color: $color__main_milk;
     margin: 0px 62px 0px 0px;
 
-    @include tablet {
-      margin: 0px 0px 0px 0px;
-    }
+    // @include tablet {
+    //   margin: 0px 0px 0px 0px;
+    // }
 
-    @include mobile {
-      font-size: 1em;
-      margin: 10% 5% 0% 5%;
-      text-align: justify;
-    }
+    // @include mobile {
+    //   font-size: 1em;
+    //   margin: 10% 5% 0% 5%;
+    //   text-align: justify;
+    // }
   }
 
   &__btn {
     @include button;
     margin-top: 40px;
 
-    @include tablet {
-      margin: 30px 0px 0px 0px;
-    }
-    @include mobile {
-      margin: 10% 0% 5% 20%;
-    }
+    // @include tablet {
+    //   margin: 30px 0px 0px 0px;
+    // }
+    // @include mobile {
+    //   margin: 10% 0% 5% 20%;
+    // }
 
-    &:hover{
+    &:hover {
       transform: scale(0.95);
       background-color: $color__main_white;
       color: $color__main_blue;
@@ -95,46 +95,33 @@
     }
   }
 
-
-
   &__image {
-    width: 43%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-
-    @include laptop {
+    display: none;
+    @media (min-width: $md3+px) {
       width: 50%;
-      margin: 100px 0px 0px 0px;
-      justify-content: normal;
-    }
-    @include tablet {
-      width: 50%;
-      margin: 120px 0px 0px 0px;
-      justify-content: normal;
-    }
-    @include mobile {
-      display: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
     }
   }
 
   &__picture1 {
     margin: 0px 0px -230px 4px;
-
-    @include laptop {
-      margin: 0px 0px 65px 0px;
-    }
-    @include tablet {
-      margin: 0px 0px 10px 0px;
-    }
   }
+  //   @include laptop {
+  //     margin: 0px 0px 65px 0px;
+  //   }
+  //   @include tablet {
+  //     margin: 0px 0px 10px 0px;
+  //   }
+  // }
 
   &__picture2 {
     align-self: flex-end;
 
-    @include tablet {
-      align-self: auto;
-    }
+    // @include tablet {
+    //   align-self: auto;
+    // }
   }
 }
 .picture {
