--- a/css/index.css
+++ b/css/index.css
@@ -233,12 +233,12 @@ table {
   border: 1px solid #5474fd;
   transition-duration: 0.6s;
 }
-.header__icon {
-  margin-left: 7px;
-}
-.header__search:hover path {
+.header__search button:hover path {
   fill: #5474fd;
   transition-duration: 0.6s;
+}
+.header__icon {
+  margin-left: 7px;
 }
 .header__navy_wrapper {
   width: 100%;
