--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -36,16 +36,6 @@
     text-align: center;
     color: $color__main_white;
     padding: 15px 0px 20px 0px;
-
-    // @include tablet {
-    //   font-size: 1em;
-    //   padding: 15px 0px 50px 0px;
-    // }
-    // @include mobile {
-    //   font-size: 1em;
-    //   text-align: left;
-    //   padding: 15px 0px 50px 50px;
-    // }
   }
 
   &__search {
@@ -98,18 +88,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    // @media (min-width: $md3+px) {
-    //   width: 20%;
-    // }
-    // @include tablet {
-    //   width: 138px;
-    //   font-size: 12px;
-    // }
-    // @include mobile {
-    //   width: 100px;
-    //   font-size: 12px;
-    //   padding: 17px 0px 17px 0px;
-    // }
   }
 
   &__search button:hover {
@@ -121,15 +99,14 @@
     transition-duration: 0.6s;
   }
 
-  &__icon {
-    margin-left: 7px;
-  }
-
-  &__search:hover path {
+  &__search button:hover path {
     fill: $color__main_blue;
     -webkit-transition-duration: 0.6s;
     -o-transition-duration: 0.6s;
     transition-duration: 0.6s;
+  }
+  &__icon {
+    margin-left: 7px;
   }
 
   &__navy_wrapper {
