--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,7 @@ $font_josefinSans: 'Josefin Sans', sans-serif;
 $color__main_white: #ffffff;
 $color__main_milk: #e8e8e8;
 $color__main_blue: #5474fd;
+$color__main_blue_hover: #cacfe6;
 $color__main_grey: rgba(35, 35, 35, 0.9);
 $color__main_dark-grey: #333333;
 $color__main_light-grey:#999999;
