--- a/css/index.css
+++ b/css/index.css
@@ -219,6 +219,8 @@ table {
   font-size: 14px;
   letter-spacing: 1.4px;
   text-align: center;
+  margin: 0;
+  padding: 0;
   color: #ffffff;
   text-transform: uppercase;
   outline: none;
@@ -228,7 +230,7 @@ table {
   align-items: center;
 }
 .header__search button:hover {
-  background-color: #ffffff;
+  background-color: #cacfe6;
   color: #5474fd;
   border: 1px solid #5474fd;
   transition-duration: 0.6s;
