--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -81,6 +81,8 @@
     font-size: 14px;
     letter-spacing: 1.4px;
     text-align: center;
+    margin: 0;
+    padding: 0;
     color: $color__main_white;
     text-transform: uppercase;
     outline: none;
@@ -91,7 +93,7 @@
   }
 
   &__search button:hover {
-    background-color: $color__main_white;
+    background-color: $color__main_blue_hover;
     color: $color__main_blue;
     border: 1px solid $color__main_blue;
     -webkit-transition-duration: 0.6s;
