--- a/css/index.css
+++ b/css/index.css
@@ -244,12 +244,12 @@ table {
 }
 .header__navy_wrapper {
   width: 100%;
-  height: 55px;
+  height: 7%;
   background-color: #5474fd;
 }
 .header__navy {
   width: 100%;
-  height: 60px;
+  height: 100%;
   background-color: #5474fd;
   display: flex;
   justify-content: space-between;
@@ -294,7 +294,7 @@ table {
   flex-direction: column;
   margin: 40% 0 5% 0;
 }
-@media (min-width: 1200px) {
+@media (min-width: 991.98px) {
   .scroll {
     margin: 20% 0 3% 0;
   }
