--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -113,12 +113,12 @@
 
   &__navy_wrapper {
     width: 100%;
-    height: 55px;
+    height: 7%;
     background-color: $color__main_blue;
   }
   &__navy {
     width: 100%;
-    height: 60px;
+    height: 100%;
     background-color: $color__main_blue;
     display: flex;
     justify-content: space-between;
@@ -167,7 +167,7 @@
   flex-direction: column;
   margin: 40% 0 5% 0;
 
-  @media (min-width: $md1+px) {
+  @media (min-width: $md2+px) {
     margin: 20% 0 3% 0;
   }
   @media (max-height: 820px) {
