--- a/css/index.css
+++ b/css/index.css
@@ -175,12 +175,17 @@ table {
   background: #ffffff;
   justify-content: center;
   display: inline-flex;
-  margin: 10% 0 10% 0;
+  margin: 10% 0 0;
   width: 100%;
 }
 @media (min-width: 767.98px) {
   .header__search {
     width: 60%;
+  }
+}
+@media (max-height: 820px) {
+  .header__search {
+    margin: 5% 0 5% 0;
   }
 }
 .header__search input {
@@ -189,7 +194,7 @@ table {
   border: none;
   flex: 1 1 auto;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 11px;
+  font-size: 14px;
   line-height: 1.86;
   text-align: center;
   cursor: pointer;
@@ -212,7 +217,7 @@ table {
   }
 }
 .header__search button {
-  width: 37%;
+  width: 17%;
   background-color: #5474fd;
   cursor: pointer;
   font-family: "Aleo", serif;
@@ -229,6 +234,19 @@ table {
   justify-content: center;
   align-items: center;
 }
+@media (min-width: 767.98px) {
+  .header__search button {
+    width: 37%;
+  }
+}
+.header__search button p {
+  display: none;
+}
+@media (min-width: 767.98px) {
+  .header__search button p {
+    display: block;
+  }
+}
 .header__search button:hover {
   background-color: #cacfe6;
   color: #5474fd;
@@ -240,7 +258,12 @@ table {
   transition-duration: 0.6s;
 }
 .header__icon {
-  margin-left: 7px;
+  margin-left: 0px;
+}
+@media (min-width: 767.98px) {
+  .header__icon {
+    margin-left: 7px;
+  }
 }
 .header__navy_wrapper {
   width: 100%;
@@ -249,12 +272,23 @@ table {
 }
 .header__navy {
   width: 100%;
-  height: 100%;
+  height: 7%;
   background-color: #5474fd;
-  display: flex;
+  display: none;
   justify-content: space-between;
   align-items: center;
   padding: 0 5%;
+}
+@media (min-width: 767.98px) {
+  .header__navy {
+    display: flex;
+    height: 60px;
+  }
+}
+@media (max-height: 820px) {
+  .header__navy {
+    height: 60px;
+  }
 }
 .header__menu {
   display: flex;
@@ -292,16 +326,11 @@ table {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 40% 0 5% 0;
+  margin: 35% 0 5% 0;
 }
 @media (min-width: 991.98px) {
   .scroll {
     margin: 20% 0 3% 0;
-  }
-}
-@media (max-height: 820px) {
-  .scroll {
-    margin: 6% 0 3% 0;
   }
 }
 .scroll p {
@@ -353,7 +382,7 @@ input:focus:-ms-input-placeholder {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0px 0px 0px 35px;
+  padding: 0px 0px 0px 20px;
 }
 @media (min-width: 767.98px) {
   #menuToggle {
@@ -363,8 +392,8 @@ input:focus:-ms-input-placeholder {
 
 #menuToggle input {
   display: flex;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   position: absolute;
   cursor: pointer;
   opacity: 0;
@@ -373,8 +402,8 @@ input:focus:-ms-input-placeholder {
 
 #menuToggle span {
   width: 33px;
-  height: 3px;
-  margin-bottom: 7px;
+  height: 2px;
+  margin: 4px 0;
   background: #999999;
   border-radius: 4px;
   transition: all 0.5s cubic-bezier(0.08, 0.81, 0.87, 0.71);
@@ -390,12 +419,12 @@ input:focus:-ms-input-placeholder {
 
 #menuToggle input:checked ~ #span1 {
   background-color: #0c2461;
-  transform: rotate(45deg) translate(4px);
+  transform: rotate(40deg) translate(5px);
 }
 
 #menuToggle input:checked ~ #span2 {
   background-color: #0c2461;
-  transform: rotate(495deg) translate(4px);
+  transform: rotate(495deg) translate(3px);
 }
 
 #menuToggle input:checked ~ #span3 {
