--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -42,10 +42,13 @@
     background: $color__main_white;
     justify-content: center;
     display: inline-flex;
-    margin: 10% 0 10% 0;
+    margin: 10% 0 0;
     width: 100%;
     @media (min-width: $md3+px) {
       width: 60%;
+    }
+    @media (max-height: 820px) {
+      margin: 5% 0 5% 0;
     }
   }
 
@@ -55,7 +58,7 @@
     border: none;
     flex: 1 1 auto;
     font-family: $font_josefinSans;
-    font-size: 11px;
+    font-size: 14px;
     line-height: 1.86;
     text-align: center;
     cursor: pointer;
@@ -74,7 +77,7 @@
   }
 
   &__search button {
-    width: 37%;
+    width: 17%;
     background-color: $color__main_blue;
     cursor: pointer;
     font-family: $font_aleo;
@@ -90,6 +93,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    @media (min-width: $md3+px) {
+      width: 37%;
+    }
+
+    p {
+      display: none;
+      @media (min-width: $md3+px) {
+        display: block;
+      }
+    }
   }
 
   &__search button:hover {
@@ -108,7 +121,10 @@
     transition-duration: 0.6s;
   }
   &__icon {
-    margin-left: 7px;
+    margin-left: 0px;
+    @media (min-width: $md3+px) {
+      margin-left: 7px;
+    }
   }
 
   &__navy_wrapper {
@@ -118,12 +134,21 @@
   }
   &__navy {
     width: 100%;
-    height: 100%;
+    height: 7%;
     background-color: $color__main_blue;
-    display: flex;
+    display: none;
     justify-content: space-between;
     align-items: center;
     padding: 0 5%;
+
+    @media (min-width: $md3+px) {
+      display: flex;
+
+      height: 60px;
+    }
+    @media (max-height: 820px) {
+      height: 60px;
+    }
   }
 
   &__menu {
@@ -165,13 +190,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 40% 0 5% 0;
+  margin: 35% 0 5% 0;
 
   @media (min-width: $md2+px) {
     margin: 20% 0 3% 0;
-  }
-  @media (max-height: 820px) {
-    margin: 6% 0 3% 0;
   }
 
   p {
@@ -223,7 +245,7 @@ input:focus:-ms-input-placeholder {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0px 0px 0px 35px;
+  padding: 0px 0px 0px 20px;
   @media (min-width: $md3+px) {
     display: none;
   }
@@ -231,8 +253,8 @@ input:focus:-ms-input-placeholder {
 
 #menuToggle input {
   display: flex;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   position: absolute;
   cursor: pointer;
   opacity: 0;
@@ -241,8 +263,8 @@ input:focus:-ms-input-placeholder {
 
 #menuToggle span {
   width: 33px;
-  height: 3px;
-  margin-bottom: 7px;
+  height: 2px;
+  margin: 4px 0;
   background: $color__main_light-grey;
   border-radius: 4px;
   -webkit-transition: all 0.5s cubic-bezier(0.08, 0.81, 0.87, 0.71);
@@ -262,11 +284,11 @@ input:focus:-ms-input-placeholder {
 
 #menuToggle input:checked ~ #span1 {
   background-color: #0c2461;
-  transform: rotate(45deg) translate(4px);
+  transform: rotate(40deg) translate(5px);
 }
 #menuToggle input:checked ~ #span2 {
   background-color: #0c2461;
-  transform: rotate(495deg) translate(4px);
+  transform: rotate(495deg) translate(3px);
 }
 #menuToggle input:checked ~ #span3 {
   background-color: #0c2461;
