--- a/scss/_why-choose-us.scss
+++ b/scss/_why-choose-us.scss
@@ -2,7 +2,7 @@
   background-image: url(../assets/image/why-bg.jpg);
   background-position: bottom;
   background-size: cover;
-  height: 685px;
+  height: 75%;
 
   // @include laptop {
   //   height: 100vh;
