--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,16 @@ body {
 .container {
   max-width: 1110px;
   // margin: 0px auto;
-  height: 100%;
+  // height: 100%;
+}
+
+.who-wrapper{
+width: 100%;
+height: 100vh;
+
+// @media (min-width: $md2+px) {
+//   height: 100%;
+// }
 
 }
 
