--- a/scss/_how-it-works.scss
+++ b/scss/_how-it-works.scss
@@ -1,18 +1,23 @@
 .how-it-works {
   background-color: $color__main_dark-grey;
-  height: 25%;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 600px;
+width: 100%;
+  @media (min-width: $md3+px) {
+    height: 25%;
+  }
+
 
   &__pic {
     display: flex;
     flex-direction: column;
-    height: 300px;
     width: 100%;
+    height: 100%;
+
     @media (min-width: $md3+px) {
       flex-direction: row;
-      height: 100%;
     }
 
     // justify-content: space-between;
@@ -32,12 +37,15 @@
   }
 
   &__pic li{
-    width: 33%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    @media (min-width: $md3+px) {
+      width: 33%;
+    }
   }
 
   &__pic li:hover {
