--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,11 +22,12 @@ body {
 
 .who-wrapper{
 width: 100%;
-height: 100vh;
+height: 100%;
 
-// @media (min-width: $md2+px) {
-//   height: 100%;
-// }
+@media (min-width: $md3+px) {
+    height: 100vh;
+
+}
 
 }
 
