--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -129,7 +129,7 @@
 
   &__navy_wrapper {
     width: 100%;
-    height: 7%;
+    // height: 7%;
     background-color: $color__main_blue;
   }
   &__navy {
