--- a/scss/_why-choose-us.scss
+++ b/scss/_why-choose-us.scss
@@ -4,15 +4,15 @@
   background-size: cover;
   height: 75%;
 
-  // @include laptop {
-  //   height: 100vh;
-  // }
-  // @include tablet {
-  //   height: 100vh;
-  // }
-  // @include mobile {
-  //   height: 100vh;
-  // }
+  @include laptop {
+    height: 100vh;
+  }
+  @include tablet {
+    height: 100vh;
+  }
+  @include mobile {
+    height: 100vh;
+  }
 
   &__row {
     display: flex;
@@ -23,17 +23,17 @@
   &__item {
     width: 100%;
 
-    // @include laptop {
-    //   margin: 150px 0px 0px 35px;
-    //   width: 45%;
-    // }
-    // @include tablet {
-    //   margin: 150px 0px 0px 25px;
-    //   width: 45%;
-    // }
-    // @include mobile {
-    //   width: 100%;
-    // }
+    @include laptop {
+      margin: 150px 0px 0px 35px;
+      width: 45%;
+    }
+    @include tablet {
+      margin: 150px 0px 0px 25px;
+      width: 45%;
+    }
+    @include mobile {
+      width: 100%;
+    }
   }
 
   &__title {
@@ -45,15 +45,15 @@
     color: $color__main_white;
     padding: 207px 0px 65px 0px;
 
-    // @include tablet {
-    //   font-size: 1.5em;
-    //   padding: 50px 10px 50px 0px;
-    // }
+    @include tablet {
+      font-size: 1.5em;
+      padding: 50px 10px 50px 0px;
+    }
 
-    // @include mobile {
-    //   font-size: 2em;
-    //   padding: 20% 5% 5% 5%;
-    // }
+    @include mobile {
+      font-size: 2em;
+      padding: 20% 5% 5% 5%;
+    }
   }
 
   &__text {
@@ -65,27 +65,27 @@
     color: $color__main_milk;
     margin: 0px 62px 0px 0px;
 
-    // @include tablet {
-    //   margin: 0px 0px 0px 0px;
-    // }
+    @include tablet {
+      margin: 0px 0px 0px 0px;
+    }
 
-    // @include mobile {
-    //   font-size: 1em;
-    //   margin: 10% 5% 0% 5%;
-    //   text-align: justify;
-    // }
+    @include mobile {
+      font-size: 1em;
+      margin: 10% 5% 0% 5%;
+      text-align: justify;
+    }
   }
 
   &__btn {
     @include button;
     margin-top: 40px;
 
-    // @include tablet {
-    //   margin: 30px 0px 0px 0px;
-    // }
-    // @include mobile {
-    //   margin: 10% 0% 5% 20%;
-    // }
+    @include tablet {
+      margin: 30px 0px 0px 0px;
+    }
+    @include mobile {
+      margin: 10% 0% 5% 20%;
+    }
 
     &:hover {
       transform: scale(0.95);
@@ -97,7 +97,7 @@
 
   &__image {
     display: none;
-    @media (min-width: $md3+px) {
+    @include tablet {
       width: 50%;
       display: flex;
       flex-direction: column;
@@ -107,23 +107,24 @@
 
   &__picture1 {
     margin: 0px 0px -230px 4px;
+
+    @include laptop {
+      margin: 0px 0px 65px 0px;
+    }
+    @include tablet {
+      margin: 0px 0px 10px 0px;
+    }
   }
-  //   @include laptop {
-  //     margin: 0px 0px 65px 0px;
-  //   }
-  //   @include tablet {
-  //     margin: 0px 0px 10px 0px;
-  //   }
-  // }
 
   &__picture2 {
     align-self: flex-end;
 
-    // @include tablet {
-    //   align-self: auto;
-    // }
+    @include tablet {
+      align-self: auto;
+    }
   }
 }
+
 .picture {
   width: 350px;
   height: 220px;
