--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,20 +15,12 @@ body {
 }
 
 .container {
-  max-width: 1110px;
-  // margin: 0px auto;
-  // height: 100%;
+  // max-width: 1110px;
+  margin: 0px auto;
+  height: 100%;
 }
 
-.who-wrapper{
-width: 100%;
-height: 100%;
-
-@media (min-width: $md3+px) {
-    height: 100vh;
-
+.who-wrapper {
+  width: 100%;
+  height: 100%;
 }
-
-}
-
-
